# receipt-ocr

./: .gitignore  README.md  asprise.py  extract_csv.py  ocr-space.py  pyproject.toml
receipt_ocr/: main.py
